- Bug fix for bugzilla bug 6

Changes in version 3.2
----------------------

- query observations: je kan ook de observaties van een maand (bv. alle observaties gedaan in april), ongeacht het jaar opvragen, oog tussen bepaalde dagen in een maand.

- Query objects: analyse input parameters ons the page itself before jumping to execute_query_objects. This way, errors can be reported 
  on the page itself.

- import and export of (public or private) lists.

- Sorteren op lijst van nabijgelegen objecten

- Nabijgelegen objecten en detail van een object moet in de waarneemlijst kunnen worden gestoken

- Waarnemingen die niet werden gezien stonden als waarneming in de lijst van top_observers

- Berekenen van contrast reserve voor objecten

- Locatie opgesplitst per waarnemer. Waarnemers kunnen zelf waarneemplaatsen verwijderen (indien daar nog geen waarneming is gebeurd...).

- Instrumenten opgesplitst per waarnemer. Waarnemers kunnen zelf instrumenten verwijderen (indien daar nog geen waarneming is gebeurd...).

- Toevoegen van vaste vergroting bij instrumenten (voor verrekijkers en zoekers)

- Toevoegen van filters

- Toevoegen van oculairs

- Toevoegen van (barlow of shapley) lenzen

Changes in version 3.11
-----------------------

- Onder Konqueror en Safari werkt de onchange actie niet van de kolom met Messier, H400... en ga je terug naar de hoofdpagina van deepskylog.be

- export to pdf of csv van objecten herneemt de position angle

- export to pdf of csv herneemt het aantal keren dat een ongezien object werd gezien door anderen

- export to pdf of csv herneemt het aantal keren dat je zelf het object zag en wanneer voor het laatst dat was

- query objects toont bij X objecten hoeveel keren ze werden gezien door anderen

- query object toont bij Y objecten hoeveel keren je ze al zag

- vraag EvdJ om fotos in compact en compact LO is verwerkt
